tests/compile/fail/hegel_test_duplicate_test_attribute.rs
#[hegel::test]
#[test]
fn main(_tc: hegel::TestCase) {}
